--- a/wvlet-ui-main/index.html
+++ b/wvlet-ui-main/index.html
@@ -21,7 +21,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
     <title>Wvlet Editor</title>
 </head>
-<body cls="h-full">
+<body>
 <script type="module" src="/main.js"></script>
 </body>
 </html>
