--- a/wvlet-ui-main/index.html
+++ b/wvlet-ui-main/index.html
@@ -19,10 +19,9 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
-    <title>wvlet-ql</title>
+    <title>Wvlet Editor</title>
 </head>
 <body>
 <script type="module" src="/main.js"></script>
-<script src="https://accounts.google.com/gsi/client" async></script>
 </body>
 </html>
