--- a/wvlet-ui-main/index.html
+++ b/wvlet-ui-main/index.html
@@ -22,6 +22,7 @@
     <title>Wvlet Editor</title>
 </head>
 <body>
+<script type="module" src="/duckdb.js"></script>
 <script type="module" src="/main.js"></script>
 </body>
 </html>
