editor (feature: #473): Add DuckDB-Wasm query runner

--- a/wvlet-ui-playground/index.html
+++ b/wvlet-ui-playground/index.html
@@ -19,7 +19,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
-    <title>Wvlet Playground</title>
+    <title>Playground | Wvlet</title>
 </head>
 <body>
 <script type="module" src="/main.js"></script>
