--- a/wvlet-ui-playground/index.html
+++ b/wvlet-ui-playground/index.html
@@ -16,10 +16,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
+    <title>Playground | Wvlet</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
-    <title>Playground | Wvlet</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-55G099WF5N"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-55G099WF5N');
+    </script>
 </head>
 <body>
 <script type="module" src="/main.js"></script>
