--- a/wvlet-ui-playground/index.html
+++ b/wvlet-ui-playground/index.html
@@ -17,6 +17,19 @@
 <head>
     <meta charset="UTF-8" />
     <title>Playground | Wvlet</title>
+    <meta data-rh="true" name="viewport" content="width=device-width,initial-scale=1">
+    <meta data-rh="true" name="twitter:card" content="summary_large_image">
+    <meta data-rh="true" property="og:image" content="https://wvlet.org/wvlet/img/logos/wvlet-banner-1280x640.png">
+    <meta data-rh="true" name="twitter:image" content="https://wvlet.org/wvlet/img/logos/wvlet-banner-1280x640.png">
+    <meta data-rh="true" property="og:url" content="https://wvlet.org/wvlet/playground/">
+    <meta data-rh="true" property="og:locale" content="en">
+    <meta data-rh="true" property="og:title" content="Flow-Style Query Language | Wvlet Playground">
+    <meta data-rh="true" name="description" content="Wvlet is a new cross-SQL flow-style query language">
+    <meta data-rh="true" property="og:description" content="Wvlet is a new cross-SQL flow-style query language">
+    <link data-rh="true" rel="canonical" href="https://wvlet.org/wvlet/playground/">
+    <link data-rh="true" rel="alternate" href="https://wvlet.org/wvlet/playground/" hreflang="en">
+    <link data-rh="true" rel="alternate" href="https://wvlet.org/wvlet/playground/" hreflang="x-default">
+    <link rel="alternate" type="application/rss+xml" href="/wvlet/blog/rss.xml" title="Wvlet RSS Feed">
     <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
