--- a/wvlet-ui-playground/index.html
+++ b/wvlet-ui-playground/index.html
@@ -19,8 +19,8 @@
     <title>Playground | Wvlet</title>
     <meta data-rh="true" name="viewport" content="width=device-width,initial-scale=1">
     <meta data-rh="true" name="twitter:card" content="summary_large_image">
-    <meta data-rh="true" property="og:image" content="./img/playground-screenshot-1280x640.png">
-    <meta data-rh="true" name="twitter:image" content="./img/playground-screenshot-1280x640.png">
+    <meta data-rh="true" property="og:image" content="https://wvlet.org/wvlet/playground/img/playground-screenshot-1280x640.png">
+    <meta data-rh="true" name="twitter:image" content="https://wvlet.org/wvlet/playground/img/playground-screenshot-1280x640.png">
     <meta data-rh="true" property="og:url" content="https://wvlet.org/wvlet/playground/">
     <meta data-rh="true" property="og:locale" content="en">
     <meta data-rh="true" property="og:title" content="Flow-Style Query Language | Wvlet Playground">
