--- a/wvlet-ui-playground/index.html
+++ b/wvlet-ui-playground/index.html
@@ -16,6 +16,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Playground | Wvlet</title>
     <meta data-rh="true" name="viewport" content="width=device-width,initial-scale=1">
     <meta data-rh="true" name="twitter:card" content="summary_large_image">
