fix: Rename global function to hljsWvlet for consistency
- Change global function name from hljsDefineWvlet to hljsWvlet
- Update build.js to generate the correct function name
- Update README, test.html, and test files to use hljsWvlet
- Follows standard naming convention: hljs.registerLanguage('wvlet', hljsWvlet)

--- a/highlightjs-wvlet/test.html
+++ b/highlightjs-wvlet/test.html
@@ -146,7 +146,7 @@ save to 'output/results.parquet'</code></pre>
     <script src="dist/wvlet.min.js"></script>
     <script>
         // Register Wvlet language
-        hljs.registerLanguage('wvlet', window.hljsDefineWvlet);
+        hljs.registerLanguage('wvlet', window.hljsWvlet);
         
         // Apply highlighting
         hljs.highlightAll();
